--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <meta name="msapplication-TileImage" content="/images/favicons/mstile-144x144.png">
   <meta name="theme-color" content="#ffffff">
   
-  <link rel="stylesheet" href="/css/main.css?1575984541955241236">
+  <link rel="stylesheet" href="/css/main.css?1576063120181611732">
   <link rel="canonical" href="http://localhost:4000/">
   <link rel="alternate" type="application/rss+xml" title="Lucas MOLIA" href="/feed.xml">
 </head>
@@ -166,7 +166,7 @@ d’être finalisé et installé dans la salle secondaire du foyer.
         <h2 class="post-list__post-title post-title"><a href="/table_chevet/" title="Table de chevet en bois">Table de chevet en bois</a></h2>
         <p class="excerpt"><img class="miniature_post" src="images/table_chevet/15_contexte.jpg"/>Afin de faire un cadeau, je me suis lancé dans la réalisation d’une table de chevet entièrement en bois.
 Tout a été réalisé à partir d’une planche de pin de 2,50m x 50cm d’une épaisseur de 18mm.
-La première étape a été de fabriquer le plateau, carré de 50cm x 50cm. Les bords on ensuite été passés à la défonceuse 
+La première étape a été de fabriquer le plateau, carré de 50cm x 50cm. Les bords ont ensuite été passés à la défonceuse 
 afin d’obtenir ce style de bordures.
 
 &hellip;</p>
@@ -178,7 +178,7 @@ afin d’obtenir ce style de bordures.
         </div>
         <hr class="post-list__divider">
       </li><br/>
-    
+    absolute
   </ol>
 
   <hr class="post-list__divider ">
@@ -194,7 +194,7 @@ afin d’obtenir ce style de bordures.
 </footer>
 
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script type="text/javascript" src="/js/main.js?1575984541955241236"></script>
+<script type="text/javascript" src="/js/main.js?1576063120181611732"></script>
 
 
     </div>
