Photo galleries integration. First post with Nouvelle Caledonie

--- a/cv.html
+++ b/cv.html
@@ -46,9 +46,10 @@
   <meta name="msapplication-TileImage" content="/images/favicons/mstile-144x144.png">
   <meta name="theme-color" content="#ffffff">
   
-  <link rel="stylesheet" href="/css/main.css?1576063120181611732">
+  <link rel="stylesheet" href="/css/main.css?1589071926507353337">
   <link rel="canonical" href="http://localhost:4000/cv">
   <link rel="alternate" type="application/rss+xml" title="Lucas MOLIA" href="/feed.xml">
+
 </head>
 
 
@@ -77,6 +78,7 @@
             <ul class="navigation">
               <li class="navigation__item"><a href="/#projects" title="Lien vers les projets" class="blog-button">Projets</a></li>
               <li class="navigation__item"><a href="/cv" title="Lien vers le CV" class="blog-button">CV</a></li>
+              <li class="navigation__item"><a href="/photos" title="Lien vers les photos" class="blog-button">Photos</a></li>
             </ul>
           </nav>
 
@@ -158,11 +160,11 @@
       </div>
 
       <footer class="footer">
-  <span class="footer__copyright">&copy; 2019 Lucas MOLIA. All rights reserved.</span>
+  <span class="footer__copyright">&copy; 2020 Lucas MOLIA. All rights reserved.</span>
 </footer>
 
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script type="text/javascript" src="/js/main.js?1576063120181611732"></script>
+<script type="text/javascript" src="/js/main.js?1589071926507353337"></script>
 
 
     </div>
