--- a/photos.html
+++ b/photos.html
@@ -46,7 +46,7 @@
   <meta name="msapplication-TileImage" content="/images/favicons/mstile-144x144.png">
   <meta name="theme-color" content="#ffffff">
   
-  <link rel="stylesheet" href="/css/main.css?1589071926507353337">
+  <link rel="stylesheet" href="/css/main.css?1589072658002276523">
   <link rel="canonical" href="http://localhost:4000/photos">
   <link rel="alternate" type="application/rss+xml" title="Lucas MOLIA" href="/feed.xml">
 
@@ -164,6 +164,7 @@
         position:relative;
     }
 
+
     .image-gallery-index li div img {
         position:absolute;
         width:auto;
@@ -179,7 +180,7 @@
     
         <li>
             <div class="field-content">
-                <a href="nouvelle_caledonie" title="Aller vers Nouvelle Calédonie">
+                <a href="/photos/nouvelle_caledonie" title="Aller vers Nouvelle Calédonie">
                     <img src="https://i.imgur.com/42cHtgR.jpg" />
                 </a>
             </div>
@@ -198,7 +199,7 @@
 </footer>
 
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script type="text/javascript" src="/js/main.js?1589071926507353337"></script>
+<script type="text/javascript" src="/js/main.js?1589072658002276523"></script>
 
 
     </div>
