Fixing load latency for thumbnails with a resize image proxy

--- a/photos.html
+++ b/photos.html
@@ -46,7 +46,7 @@
   <meta name="msapplication-TileImage" content="/images/favicons/mstile-144x144.png">
   <meta name="theme-color" content="#ffffff">
   
-  <link rel="stylesheet" href="/css/main.css?1589117912515819260">
+  <link rel="stylesheet" href="/css/main.css?1589118927337345663">
   <link rel="canonical" href="http://localhost:4000/photos">
   <link rel="alternate" type="application/rss+xml" title="Lucas MOLIA" href="/feed.xml">
 
@@ -181,7 +181,7 @@
         <li>
             <div class="field-content">
                 <a href="/photos/pays_bas" title="Aller vers Pays-Bas">
-                    <img src="https://i.imgur.com/e2W7Nhj.jpg" />
+                    <img src="http://images.weserv.nl/?url=https://i.imgur.com/e2W7Nhj.jpg&amp;w=500&amp;h=500&amp;output=jpg&amp;q=65" />
                 </a>
             </div>
             <span>Pays-Bas</span>
@@ -190,7 +190,7 @@
         <li>
             <div class="field-content">
                 <a href="/photos/chaumont" title="Aller vers Chaumont">
-                    <img src="https://i.imgur.com/G70NqWn.jpg" />
+                    <img src="http://images.weserv.nl/?url=https://i.imgur.com/G70NqWn.jpg&amp;w=500&amp;h=500&amp;output=jpg&amp;q=65" />
                 </a>
             </div>
             <span>Chaumont</span>
@@ -199,7 +199,7 @@
         <li>
             <div class="field-content">
                 <a href="/photos/astrophoto" title="Aller vers Astrophoto">
-                    <img src="https://i.imgur.com/CATAB64.jpg" />
+                    <img src="http://images.weserv.nl/?url=https://i.imgur.com/CATAB64.jpg&amp;w=500&amp;h=500&amp;output=jpg&amp;q=65" />
                 </a>
             </div>
             <span>Astrophoto</span>
@@ -208,7 +208,7 @@
         <li>
             <div class="field-content">
                 <a href="/photos/toit_u7" title="Aller vers Évry vu de haut">
-                    <img src="https://i.imgur.com/3vW15vN.jpg" />
+                    <img src="http://images.weserv.nl/?url=https://i.imgur.com/3vW15vN.jpg&amp;w=500&amp;h=500&amp;output=jpg&amp;q=65" />
                 </a>
             </div>
             <span>Évry vu de haut</span>
@@ -217,7 +217,7 @@
         <li>
             <div class="field-content">
                 <a href="/photos/nouvelle_caledonie" title="Aller vers Nouvelle-Calédonie">
-                    <img src="https://i.imgur.com/42cHtgR.jpg" />
+                    <img src="http://images.weserv.nl/?url=https://i.imgur.com/42cHtgR.jpg&amp;w=500&amp;h=500&amp;output=jpg&amp;q=65" />
                 </a>
             </div>
             <span>Nouvelle-Calédonie</span>
@@ -235,7 +235,7 @@
 </footer>
 
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script type="text/javascript" src="/js/main.js?1589117912515819260"></script>
+<script type="text/javascript" src="/js/main.js?1589118927337345663"></script>
 
 
     </div>
